--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
 		"@lodder/grunt-postcss": "^3.1.1",
 		"@playwright/test": "1.32.0",
 		"@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
-		"@wordpress/babel-preset-default": "7.26.13",
-		"@wordpress/dependency-extraction-webpack-plugin": "4.25.13",
-		"@wordpress/e2e-test-utils": "10.13.13",
-		"@wordpress/e2e-test-utils-playwright": "0.10.13",
-		"@wordpress/prettier-config": "2.25.13",
-		"@wordpress/scripts": "26.13.13",
+		"@wordpress/babel-preset-default": "7.33.0",
+		"@wordpress/dependency-extraction-webpack-plugin": "5.0.0",
+		"@wordpress/e2e-test-utils": "10.20.0",
+		"@wordpress/e2e-test-utils-playwright": "0.17.0",
+		"@wordpress/prettier-config": "3.6.0",
+		"@wordpress/scripts": "27.0.0",
 		"autoprefixer": "10.4.16",
 		"chalk": "5.3.0",
 		"check-node-version": "4.2.1",
@@ -80,70 +80,71 @@
 	"dependencies": {
 		"@emotion/is-prop-valid": "0.8.8",
 		"@emotion/memoize": "0.7.4",
-		"@wordpress/a11y": "3.42.13",
-		"@wordpress/annotations": "2.42.13",
-		"@wordpress/api-fetch": "6.39.13",
-		"@wordpress/autop": "3.42.13",
-		"@wordpress/blob": "3.42.13",
-		"@wordpress/block-directory": "4.19.16",
-		"@wordpress/block-editor": "12.10.14",
-		"@wordpress/block-library": "8.19.16",
-		"@wordpress/block-serialization-default-parser": "4.42.13",
-		"@wordpress/blocks": "12.19.13",
-		"@wordpress/commands": "0.13.14",
-		"@wordpress/components": "25.8.14",
-		"@wordpress/compose": "6.19.13",
-		"@wordpress/core-commands": "0.11.14",
-		"@wordpress/core-data": "6.19.14",
-		"@wordpress/customize-widgets": "4.19.16",
-		"@wordpress/data": "9.12.13",
-		"@wordpress/data-controls": "3.11.13",
-		"@wordpress/date": "4.42.13",
-		"@wordpress/deprecated": "3.42.13",
-		"@wordpress/dom": "3.42.13",
-		"@wordpress/dom-ready": "3.42.13",
-		"@wordpress/edit-post": "7.19.16",
-		"@wordpress/edit-site": "5.19.16",
-		"@wordpress/edit-widgets": "5.19.16",
-		"@wordpress/editor": "13.19.14",
-		"@wordpress/element": "5.19.13",
-		"@wordpress/escape-html": "2.42.13",
-		"@wordpress/format-library": "4.19.14",
-		"@wordpress/hooks": "3.42.13",
-		"@wordpress/html-entities": "3.42.13",
-		"@wordpress/i18n": "4.42.13",
-		"@wordpress/icons": "9.33.13",
-		"@wordpress/interactivity": "2.3.13",
-		"@wordpress/interface": "5.19.14",
-		"@wordpress/is-shallow-equal": "4.42.13",
-		"@wordpress/keyboard-shortcuts": "4.19.13",
-		"@wordpress/keycodes": "3.42.13",
-		"@wordpress/list-reusable-blocks": "4.19.14",
-		"@wordpress/media-utils": "4.33.13",
-		"@wordpress/notices": "4.10.13",
-		"@wordpress/nux": "8.4.14",
-		"@wordpress/patterns": "1.3.14",
-		"@wordpress/plugins": "6.10.14",
-		"@wordpress/preferences": "3.19.14",
-		"@wordpress/preferences-persistence": "1.34.13",
-		"@wordpress/primitives": "3.40.13",
-		"@wordpress/priority-queue": "2.42.13",
-		"@wordpress/private-apis": "0.24.13",
-		"@wordpress/redux-routine": "4.42.13",
-		"@wordpress/reusable-blocks": "4.19.14",
-		"@wordpress/rich-text": "6.19.13",
-		"@wordpress/router": "0.11.13",
-		"@wordpress/server-side-render": "4.19.14",
-		"@wordpress/shortcode": "3.42.13",
-		"@wordpress/style-engine": "1.25.13",
-		"@wordpress/sync": "0.4.13",
-		"@wordpress/token-list": "2.42.13",
-		"@wordpress/undo-manager": "0.2.13",
-		"@wordpress/url": "3.43.13",
-		"@wordpress/viewport": "5.19.13",
-		"@wordpress/warning": "2.42.13",
-		"@wordpress/widgets": "3.19.14",
-		"@wordpress/wordcount": "3.42.13",
+		"@wordpress/a11y": "3.49.0",
+		"@wordpress/annotations": "2.49.0",
+		"@wordpress/api-fetch": "6.46.0",
+		"@wordpress/autop": "3.49.0",
+		"@wordpress/blob": "3.49.0",
+		"@wordpress/block-directory": "4.26.0",
+		"@wordpress/block-editor": "12.17.0",
+		"@wordpress/block-library": "8.26.0",
+		"@wordpress/block-serialization-default-parser": "4.49.0",
+		"@wordpress/blocks": "12.26.0",
+		"@wordpress/commands": "0.20.0",
+		"@wordpress/components": "25.15.0",
+		"@wordpress/compose": "6.26.0",
+		"@wordpress/core-commands": "0.18.0",
+		"@wordpress/core-data": "6.26.0",
+		"@wordpress/customize-widgets": "4.26.0",
+		"@wordpress/data": "9.19.0",
+		"@wordpress/data-controls": "3.18.0",
+		"@wordpress/dataviews": "0.3.0",
+		"@wordpress/date": "4.49.0",
+		"@wordpress/deprecated": "3.49.0",
+		"@wordpress/dom": "3.49.0",
+		"@wordpress/dom-ready": "3.49.0",
+		"@wordpress/edit-post": "7.26.0",
+		"@wordpress/edit-site": "5.26.0",
+		"@wordpress/edit-widgets": "5.26.0",
+		"@wordpress/editor": "13.26.0",
+		"@wordpress/element": "5.26.0",
+		"@wordpress/escape-html": "2.49.0",
+		"@wordpress/format-library": "4.26.0",
+		"@wordpress/hooks": "3.49.0",
+		"@wordpress/html-entities": "3.49.0",
+		"@wordpress/i18n": "4.49.0",
+		"@wordpress/icons": "9.40.0",
+		"@wordpress/interactivity": "3.2.0",
+		"@wordpress/interface": "5.26.0",
+		"@wordpress/is-shallow-equal": "4.49.0",
+		"@wordpress/keyboard-shortcuts": "4.26.0",
+		"@wordpress/keycodes": "3.49.0",
+		"@wordpress/list-reusable-blocks": "4.26.0",
+		"@wordpress/media-utils": "4.40.0",
+		"@wordpress/notices": "4.17.0",
+		"@wordpress/nux": "8.11.0",
+		"@wordpress/patterns": "1.10.0",
+		"@wordpress/plugins": "6.17.0",
+		"@wordpress/preferences": "3.26.0",
+		"@wordpress/preferences-persistence": "1.41.0",
+		"@wordpress/primitives": "3.47.0",
+		"@wordpress/priority-queue": "2.49.0",
+		"@wordpress/private-apis": "0.31.0",
+		"@wordpress/redux-routine": "4.49.0",
+		"@wordpress/reusable-blocks": "4.26.0",
+		"@wordpress/rich-text": "6.26.0",
+		"@wordpress/router": "0.18.0",
+		"@wordpress/server-side-render": "4.26.0",
+		"@wordpress/shortcode": "3.49.0",
+		"@wordpress/style-engine": "1.32.0",
+		"@wordpress/sync": "0.11.0",
+		"@wordpress/token-list": "2.49.0",
+		"@wordpress/undo-manager": "0.9.0",
+		"@wordpress/url": "3.50.0",
+		"@wordpress/viewport": "5.26.0",
+		"@wordpress/warning": "2.49.0",
+		"@wordpress/widgets": "3.26.0",
+		"@wordpress/wordcount": "3.49.0",
 		"backbone": "1.5.0",
 		"clipboard": "2.0.11",
 		"core-js-url-browser": "3.6.4",
@@ -167,6 +168,7 @@
 		"polyfill-library": "4.8.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-is": "18.2.0",
 		"regenerator-runtime": "0.14.0",
 		"tslib": "2.6.2",
 		"underscore": "1.13.6",
